--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
-    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query": "^5.18.1",
     "@thirdweb-dev/react": "^3.16.0",
     "@thirdweb-dev/sdk": "^3.10.62",
     "class-variance-authority": "^0.7.0",
@@ -36,10 +36,10 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.0",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "husky": "^8.0.0"
+    "vite": "^4.4.5"
   }
 }
