--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-loader-spinner": "^5.4.5",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.16.0",
+    "rehype-sanitize": "^6.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
